# Whisper-Finetune

./: .gitignore  README.md  README_en.md  aishell.py  convert-ggml.py  evaluation.py  finetune.py  infer.py  infer_ct2.py  infer_gui.py  infer_server.py  infer_tfs.py  infer_thirteen.py  main.py  merge_lora.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: android-demo-build.yml
AndroidDemo/: README.md  README_en.md  settings.gradle
AndroidDemo/app/: .gitignore  build.gradle  yeyupiaoling.jks
AndroidDemo/app/src/androidTest/java/com/yeyupiaoling/whisper/: ExampleInstrumentedTest.kt
AndroidDemo/app/src/main/: AndroidManifest.xml
AndroidDemo/app/src/main/java/com/yeyupiaoling/whisper/: AudioFileActivity.kt  AudioView.java  AudioView.kt  FileRecognitionActivity.java  LibWhisper.kt  MainActivity.java  MainActivity.kt  ModelManager.kt  Utils.java  (+5 more)
AndroidDemo/app/src/main/jni/whisper/: Whisper.mk  jni.c
AndroidDemo/app/src/main/res/layout/: activity_audio_file.xml  activity_file_recognition.xml  activity_main.xml  activity_record.xml  activity_test.xml
AndroidDemo/app/src/main/res/values/: strings.xml  themes.xml
AndroidDemo/gradle/wrapper/: gradle-wrapper.properties
WhisperDesktop/: README.md  README_en.md
configs/: augmentation.json
metrics/: cer.py  wer.py
static/: index.css  record.js
templates/: index.html
tools/: audiofolder.py  compute_speed_ct2.py  compute_speed_tf.py  create_wenetspeech_data.py  ljspeech.py  run_compute.sh
utils/: binary.py  callback.py  data_utils.py  model_utils.py  pun_predictor.py  reader.py  utils.py
(+1 files in other folders)
